--- a/FUNCTION_DAY1.ipynb
+++ b/FUNCTION_DAY1.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "id": "fc16bd6e",
    "metadata": {},
    "outputs": [],
@@ -367,10 +367,15 @@
     "# com , user\n",
     "def rps():\n",
     "    c=1\n",
-    "    while c<=3:\n",
+    "    co=0\n",
+    "    us=0\n",
+    "    ti=0\n",
+    "    while c<=5:\n",
+    "        p=['r','p','s']\n",
+    "       \n",
     "        print('*'*78)\n",
     "        print()\n",
-    "        print(f'you have {4-c} chance left'.center(70))\n",
+    "        print(f'you have {6-c} chance left'.center(70))\n",
     "        print()\n",
     "        print('*'*78)\n",
     "        user_win_ch=[('r','p'),('p','s'),('s','r')]\n",
@@ -382,21 +387,29 @@
     "        print('computer choice: ',com)\n",
     "        if res in user_win_ch:\n",
     "            print('you win')\n",
-    "            break\n",
+    "            us+=1\n",
     "        elif com==user:\n",
     "            print('match tie')\n",
+    "            ti+=1\n",
     "        else:\n",
     "            print('computer win')\n",
+    "            co+=1\n",
+    "        print('*'*78)\n",
+    "        print()\n",
+    "        print(f'com: {co} \\t user: {us} \\t tie: {ti}'.center(80))\n",
+    "        print()\n",
+    "        print('*'*78)\n",
+    "        print()\n",
     "        c+=1"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "9527ec07",
+   "cell_type": "raw",
+   "id": "dbee03fb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "rps()"
+   ]
   },
   {
    "cell_type": "code",
@@ -404,9 +417,7 @@
    "id": "d31b9aee",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "p=['r','p','s']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -429,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "id": "df61147f",
    "metadata": {},
    "outputs": [
@@ -439,7 +450,28 @@
      "text": [
       "******************************************************************************\n",
       "\n",
-      "                        you have 3 chance left                        \n",
+      "                           com: 0 \t user: 0 \t tie: 0                            \n",
+      "\n",
+      "******************************************************************************\n",
+      "\n",
+      "******************************************************************************\n",
+      "\n",
+      "                        you have 5 chance left                        \n",
+      "\n",
+      "******************************************************************************\n",
+      "Enter your choice: r | p | s: p\n",
+      "your choice : p\n",
+      "computer choice:  s\n",
+      "computer win\n",
+      "******************************************************************************\n",
+      "\n",
+      "                           com: 1 \t user: 0 \t tie: 0                            \n",
+      "\n",
+      "******************************************************************************\n",
+      "\n",
+      "******************************************************************************\n",
+      "\n",
+      "                        you have 4 chance left                        \n",
       "\n",
       "******************************************************************************\n",
       "Enter your choice: r | p | s: r\n",
@@ -448,13 +480,49 @@
       "match tie\n",
       "******************************************************************************\n",
       "\n",
+      "                           com: 1 \t user: 0 \t tie: 1                            \n",
+      "\n",
+      "******************************************************************************\n",
+      "\n",
+      "******************************************************************************\n",
+      "\n",
+      "                        you have 3 chance left                        \n",
+      "\n",
+      "******************************************************************************\n",
+      "Enter your choice: r | p | s: s\n",
+      "your choice : s\n",
+      "computer choice:  r\n",
+      "computer win\n",
+      "******************************************************************************\n",
+      "\n",
+      "                           com: 2 \t user: 0 \t tie: 1                            \n",
+      "\n",
+      "******************************************************************************\n",
+      "\n",
+      "******************************************************************************\n",
+      "\n",
       "                        you have 2 chance left                        \n",
       "\n",
       "******************************************************************************\n",
-      "Enter your choice: r | p | s: r\n",
-      "your choice : r\n",
-      "computer choice:  s\n",
-      "you win\n"
+      "Enter your choice: r | p | s: p\n",
+      "your choice : p\n",
+      "computer choice:  p\n",
+      "match tie\n",
+      "******************************************************************************\n",
+      "\n",
+      "                           com: 2 \t user: 0 \t tie: 2                            \n",
+      "\n",
+      "******************************************************************************\n",
+      "\n",
+      "******************************************************************************\n",
+      "\n",
+      "                        you have 1 chance left                        \n",
+      "\n",
+      "******************************************************************************\n",
+      "Enter your choice: r | p | s: p\n",
+      "your choice : p\n",
+      "computer choice:  p\n",
+      "match tie\n"
      ]
     }
    ],
@@ -525,15 +593,345 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5ed69d59",
+   "metadata": {},
+   "source": [
+    "#  Bank Application  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32d4681d",
+   "metadata": {},
+   "source": [
+    "                 1. signup\n",
+    "                 2. login\n",
+    "                 3. debit , credit , check_balance\n",
+    "                 4. change password | forget password\n",
+    "                 "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b663b2ec",
+   "execution_count": 30,
+   "id": "bc8ef96f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "132321\n"
+     ]
+    }
+   ],
+   "source": [
+    "# otp-----> 576564\n",
+    "import random\n",
+    "otp=''\n",
+    "for i in range(6):\n",
+    "    otp=otp+str(random.randint(0,9))\n",
+    "print(otp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "41d6be1f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "e=random.randint(0,9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "270b3db7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "568b6311",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "e4d9f00c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r='6'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "8ee08f03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'67'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r+'7'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "95c9b960",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#gmail host ---> smtp.gmail.com \n",
+    "# port---> 587\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "4a9cb116",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import smtplib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "2ccd7e51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "otp=''\n",
+    "for i in range(6):\n",
+    "    otp=otp+str(random.randint(0,9))\n",
+    "con=smtplib.SMTP('smtp.gmail.com',587)\n",
+    "con.starttls()\n",
+    "con.login('bankapplication7@gmail.com','Bankapp@')\n",
+    "con.sendmail('bankapplication7@gmail.com','sshabnamshaikh123@gmail.com',f'Subject: OTP \\n\\n {otp}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1246e82a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data={1001:{'name':'manish','pass':'mann@123','email':'rmanish911@gmail.com','bal':10000},\n",
+    "     1002:{'name':'shan','pass':'shan@123','email':'rmanish911@gmail.com','bal':20000}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "dd6c70c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "def main():\n",
+    "    print('*'*78)\n",
+    "    print('Welcome to bank application'.center(80))\n",
+    "    print('*'*78)\n",
+    "    print()\n",
+    "    print('1. Signup \\t 2. Login \\t 3. Exit')\n",
+    "    print()\n",
+    "    usr=int(input('Enter your choice'))\n",
+    "    if usr==1:\n",
+    "        Signup()\n",
+    "    elif usr==2:\n",
+    "        Login()\n",
+    "    elif usr==3:\n",
+    "        sys.exit()\n",
+    "    else:\n",
+    "        print('invalid option')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "15943531",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from getpass import getpass\n",
+    "def Signup():\n",
+    "    name=input('Enter your name: ')\n",
+    "    email=input('Enter your email: ')\n",
+    "    pas=getpass('Enter your password: ')\n",
+    "    bal=10000\n",
+    "    import random\n",
+    "    import smtplib\n",
+    "    otp=''\n",
+    "    for i in range(6):\n",
+    "        otp=otp+str(random.randint(0,9))\n",
+    "    con=smtplib.SMTP('smtp.gmail.com',587)\n",
+    "    con.starttls()\n",
+    "    con.login('bankapplication7@gmail.com','Bankapp@')\n",
+    "    con.sendmail('bankapplication7@gmail.com',email,f'Subject: OTP \\n\\n {otp}')\n",
+    "    ot=input('Enter otp: ')\n",
+    "    if otp==ot:\n",
+    "        ac=list(data.keys())[-1]+1\n",
+    "        data[ac]={'name':name,'pass':pas,'email':email,'bal':bal}\n",
+    "        print('your created...')\n",
+    "        print('your account number is : ',ac)\n",
+    "    else:\n",
+    "        print('invalid otp....')\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2eec0590",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Login():\n",
+    "    ac=int(input('Enter your account number: '))\n",
+    "    if ac in data.keys():\n",
+    "        pas=getpass('Enter password')\n",
+    "        if data[ac]['pass']==pas:\n",
+    "            print('Login success....')\n",
+    "        else:\n",
+    "            print('invalid username or password')\n",
+    "    else:\n",
+    "        print('no result found, first go to signup...')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a26abbfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys([1001, 1002, 1003, 1004])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "3bae3000",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ss@123'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[1004]['pass']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "6a83f2d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "******************************************************************************\n",
+      "                          Welcome to bank application                           \n",
+      "******************************************************************************\n",
+      "\n",
+      "1. Signup \t 2. Login \t 3. Exit\n",
+      "\n",
+      "Enter your choice2\n",
+      "Enter your account number: 1004\n",
+      "Enter password········\n",
+      "invalid username or password\n"
+     ]
+    }
+   ],
+   "source": [
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "997a9bd1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
