--- a/FUNCTION_DAY1.ipynb
+++ b/FUNCTION_DAY1.ipynb
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "4a9cb116",
    "metadata": {},
    "outputs": [],
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "2ccd7e51",
    "metadata": {},
    "outputs": [
@@ -751,7 +751,7 @@
        "{}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "1246e82a",
    "metadata": {},
    "outputs": [],
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "dd6c70c5",
    "metadata": {},
    "outputs": [],
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "15943531",
    "metadata": {},
    "outputs": [],
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "2eec0590",
    "metadata": {},
    "outputs": [],
@@ -850,10 +850,73 @@
     "        pas=getpass('Enter password')\n",
     "        if data[ac]['pass']==pas:\n",
     "            print('Login success....')\n",
+    "            print()\n",
+    "            print('1. Credit \\t 2. Debit \\t 3. bal_check \\t 4. Exit')\n",
+    "            us=int(input('Enter your choice: '))\n",
+    "            if us==1:\n",
+    "                Credit(ac)\n",
+    "            elif us==2:\n",
+    "                Debit(ac)\n",
+    "            elif us==3:\n",
+    "                bal(ac)\n",
+    "            elif us==4:\n",
+    "                sys.exit()\n",
+    "            else:\n",
+    "                print('invalid choice ')\n",
     "        else:\n",
     "            print('invalid username or password')\n",
     "    else:\n",
     "        print('no result found, first go to signup...')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4cfa6d1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Credit(ac):\n",
+    "    amount=int(input('Enter amount : '))\n",
+    "    data[ac]['bal']+=amount\n",
+    "    print(f'your amount {amount} has been credited in your account...')\n",
+    "    print()\n",
+    "    print(f'your updated balance is:  {data[ac][\"bal\"]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "01f0d06d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Credit(ac):\n",
+    "    amount=int(input('Enter amount : '))\n",
+    "    data[ac]['bal']+=amount\n",
+    "    print(f'your amount {amount} has been credited in your account...')\n",
+    "    print()\n",
+    "    print(f'your updated balance is:  {data[ac][\"bal\"]}')\n",
+    "def Debit(ac):\n",
+    "    amount=int(input('Enter amount: '))\n",
+    "    if data[ac]['bal']>=amount:\n",
+    "        data[ac]['bal']-=amount\n",
+    "        print(f'your amount {amount} has been debited in your account...')\n",
+    "        print()\n",
+    "        print(f'your updated balance is:  {data[ac][\"bal\"]}')\n",
+    "    else:\n",
+    "        print('insufficient balance ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d654462b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bal(ac):\n",
+    "    print(f'your current balance is:  {data[ac][\"bal\"]}')"
    ]
   },
   {
@@ -900,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "6a83f2d7",
    "metadata": {},
    "outputs": [
@@ -915,9 +978,13 @@
       "1. Signup \t 2. Login \t 3. Exit\n",
       "\n",
       "Enter your choice2\n",
-      "Enter your account number: 1004\n",
+      "Enter your account number: 1001\n",
       "Enter password········\n",
-      "invalid username or password\n"
+      "Login success....\n",
+      "\n",
+      "1. Credit \t 2. Debit \t 3. bal_check \t 4. Exit\n",
+      "Enter your choice: 3\n",
+      "your updated balance is:  35000\n"
      ]
     }
    ],
@@ -927,11 +994,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "997a9bd1",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "******************************************************************************\n",
+      "                          Welcome to bank application                           \n",
+      "******************************************************************************\n",
+      "\n",
+      "1. Signup \t 2. Login \t 3. Exit\n",
+      "\n",
+      "Enter your choice2\n",
+      "Enter your account number: 1001\n",
+      "Enter password········\n",
+      "Login success....\n",
+      "\n",
+      "1. Credit \t 2. Debit \t 3. bal_check \t 4. Exit\n",
+      "Enter your choice: 1\n",
+      "Enter amount : 30000\n",
+      "your amount 30000 has been credited in your account...\n",
+      "\n",
+      "your updated balance is:  40000\n"
+     ]
+    }
+   ],
+   "source": [
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "fb50985b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40000"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[1001]['bal']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "182370dd",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data"
+   ]
   }
  ],
  "metadata": {
